--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ nav {
 
 .logoimagen {
     text-align: center;
+    background-color: rgb(206, 155, 156);
 }
 
 .img {
@@ -24,8 +25,8 @@ nav {
 }
 
 a {
-    font-size: 20px;
-    color: rgb(85, 119, 97);
+    font-size: 30px;
+    color: rgb(60, 65, 61);
     display: block;
     padding: 2px;
     text-align: center;
@@ -34,11 +35,11 @@ a {
 
 footer {
       
-    font-size: 18px;
+    font-size: 21px;
     text-align: center;
     background-color: rgb(241, 198, 225);
-    color: rgb(85, 119, 97);
-    margin: 10px;
+    color: rgb(60, 65, 61);
+    margin: 15px;
     padding: 5px;
 }
 
@@ -51,26 +52,28 @@ footer {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr;
+    margin: 15px;
 } 
 h1{
     font-size: 45px;
     text-align: center;
-    color: rgb(85, 119, 97);
+    color: rgb(60, 65, 61);
 }
 
 p {
-    font-size: 20px;
+    font-size: 28px;
     text-align: justify;
-    color: rgb(85, 119, 97);
+    color: rgb(60, 65, 61);
+    margin: 15px;
 }
 
 ul {
-    font-size: 35px;
+    font-size: 39px;
     text-align: center;
-    color: rgb(85, 119, 97);   
+    color: rgb(60, 65, 61);   
 }
 li {
-    font-size: 20px;
+    font-size: 28px;
     text-align: center;
-    color: rgb(85, 119, 97);
+    color: rgb(60, 65, 61);
 }
