--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,21 @@
     font-family: 'Lato', sans-serif;
     box-sizing: border-box;
 }
-nav {
-    background-color: rgb(240, 224, 238);
+
+/*a {
+    font-size: 13px;
+    color: rgb(85, 119, 97);
     margin: 10px;
     padding: 8px;
     display: flex;
     align-items: center;
     justify-content: space-around;
-}
+}*/
 
+header{
+    margin: 10px;
+    padding: 8px;
+}
 .logoimagen {
     text-align: center;
     background-color: rgb(206, 155, 156);
@@ -27,10 +33,17 @@ nav {
 a {
     font-size: 30px;
     color: rgb(60, 65, 61);
-    display: block;
-    padding: 2px;
+    display: flex;
+    padding: 8px;
+    margin: 10px;
     text-align: center;
     text-decoration: none;
+    align-items: center;
+    justify-content: space-around;
+}
+main {
+    margin: 10px;
+    padding: 8px;
 }
 
 footer {
@@ -64,10 +77,130 @@ p {
     font-size: 28px;
     text-align: justify;
     color: rgb(60, 65, 61);
-    margin: 15px;
+    margin: 10px;
 }
+/* Tratamientos*/---
+/*@charset "utf-8";
+.tarjeta{
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    width:150px;
+    border: 3px solid rgb(66, 63, 63);
+    box-sizing: border-box;
+    box-shadow: 2px 2px 8px 4px rgb(109, 101, 101);
+    border-radius:15px;
+    font-family: 'Lato', sans-serif;
+  }
+  .titulo{
+    font-size: 24px;
+    padding: 10px 10px 0 10px;
+    text-align: center;
+  }
+  .cuerpo{
+    padding: 10px;
+    align-items: center;
+    align-content: center;
+  }
+  .pie{
+   
+    background: #e7dee4;
+    border-radius:0 0 15px 15px;
+    padding: 10px;
+    text-align:center;
+    size-adjust: 150px;
+  
+  }
+  .pie a{
+    text-decoration: none;
+    color: rgb(92, 89, 89);
+  }
+  .pie a:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    content: ""
+  }
+.list-b{
+    font-size: 15px;
+}*/
 
-ul {
+/* css de lista productos*/
+.lista {
+    display: flexbox;
+    
+    box-sizing: border-box;
+    width: 100%;
+    margin: 10px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+  }
+  
+  .tarjeta {
+    width: 100%;
+    font-size: larger;
+    font-weight: bolder;
+    text-align: center;
+  }
+  
+  .cuerpo {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    background-image: linear-gradient(to bottom right, #d8d8d8, #f2f2f2);
+    padding: 0.5rem;
+    box-sizing: border-box;
+    border-radius: 0.5rem;
+    box-shadow: 0.4rem 0.4rem #d6d6d6;
+    width: 100%;  
+  }
+  
+  .pie {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    background-image: linear-gradient(to bottom right, #d8d8d8, #f2f2f2);
+    padding: 0.5rem;
+    box-sizing: border-box;
+    border-radius: 0.5rem;
+    box-shadow: 0.4rem 0.4rem #d6d6d6;
+    width: 100%;    
+  }
+  
+  .item-img {
+    display: block;
+    height: 70%;
+    width: 100%;
+    border-radius: 0.5rem;
+  }
+  .titulo {
+    display: flex;
+    justify-content: center;
+    color: #5c5358;
+    padding: 0.2rem;
+    font-size: 25px;
+  }
+/* Instalaciones*/
+.instal {
+    display: flex;
+}
+    
+
+
+#contacto {
+    font-size: 25px;
+    margin-left: 85%;
+}
+.navegador {
+    background-color:rgb(241, 198, 225); 
+    display: none;
+}
+/*ul {
     font-size: 39px;
     text-align: center;
     color: rgb(60, 65, 61);   
@@ -76,4 +209,5 @@ li {
     font-size: 28px;
     text-align: center;
     color: rgb(60, 65, 61);
-}
+}*/
+
