--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-/*a {
+a {
     font-size: 13px;
     color: rgb(85, 119, 97);
     margin: 10px;
@@ -13,11 +13,11 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-}*/
+}
 
 header{
     margin: 10px;
-    padding: 8px;
+    padding: 10px;
 }
 .logoimagen {
     text-align: center;
@@ -30,11 +30,19 @@ header{
 
 }
 
+.fa-pagelines {
+  color: rgb(85, 119, 97);
+  width: 10px;
+  height: 10px;
+  padding-bottom: 5px;
+  align-items: center;
+}
+
 a {
     font-size: 30px;
     color: rgb(60, 65, 61);
     display: flex;
-    padding: 8px;
+    padding: 10px;
     margin: 10px;
     text-align: center;
     text-decoration: none;
@@ -50,10 +58,10 @@ footer {
       
     font-size: 21px;
     text-align: center;
-    background-color: rgb(241, 198, 225);
+    background-color: rgb(236, 221, 231);
     color: rgb(60, 65, 61);
-    margin: 15px;
-    padding: 5px;
+    margin: 10px;
+    padding: 10px;
 }
 
 .fa-brands {
@@ -61,16 +69,17 @@ footer {
 }
 
 .menufooter {
-    padding: 7px;
+    padding: 10px;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr;
-    margin: 15px;
+    margin: 10px;
 } 
 h1{
     font-size: 45px;
     text-align: center;
     color: rgb(60, 65, 61);
+    background-color:rgb(241, 198, 225);
 }
 
 p {
@@ -79,115 +88,88 @@ p {
     color: rgb(60, 65, 61);
     margin: 10px;
 }
-/* Tratamientos*/---
-/*@charset "utf-8";
-.tarjeta{
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
-    width:150px;
-    border: 3px solid rgb(66, 63, 63);
-    box-sizing: border-box;
-    box-shadow: 2px 2px 8px 4px rgb(109, 101, 101);
-    border-radius:15px;
-    font-family: 'Lato', sans-serif;
-  }
-  .titulo{
-    font-size: 24px;
-    padding: 10px 10px 0 10px;
-    text-align: center;
-  }
-  .cuerpo{
-    padding: 10px;
-    align-items: center;
-    align-content: center;
-  }
-  .pie{
-   
-    background: #e7dee4;
-    border-radius:0 0 15px 15px;
-    padding: 10px;
-    text-align:center;
-    size-adjust: 150px;
-  
-  }
-  .pie a{
-    text-decoration: none;
-    color: rgb(92, 89, 89);
-  }
-  .pie a:after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    content: ""
-  }
-.list-b{
-    font-size: 15px;
-}*/
 
-/* css de lista productos*/
-.lista {
-    display: flexbox;
-    
-    box-sizing: border-box;
-    width: 100%;
-    margin: 10px;
-    padding: 10px;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
-  }
+/*nosotros*/
+.dccion{ 
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.datosperso{
+
+ text-align: right;
+
+}
+.imgfer{
+  width: 85%;
+  align-items: last baseline;
+  height: 150%;
   
-  .tarjeta {
-    width: 100%;
-    font-size: larger;
-    font-weight: bolder;
-    text-align: center;
-  }
+  padding: 0.5rem;
+}
+
+
+/* Tratamientos*/
+
+.lista{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  box-sizing: border-box;
+  width: 80%;
+  margin: 10px;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
+
+.tarjeta {
+  width: 65%;
+  font-size: medium;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.cuerpo {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  /*background-image: linear-gradient(to bottom right, #d8d8d8, #f2f2f2);*/
+  padding: 0.5rem;
+  box-sizing: border-box;
+  border-radius: 0.5rem;
+  box-shadow: 0.4rem 0.4rem #d6d6d6;
+  width: 90%;  
+}
+
+.pie {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  /*background-image: linear-gradient(to bottom right, #d8d8d8, #f2f2f2);*/
+  padding: 0.5rem;
+  box-sizing: border-box;
+  border-radius: 0.5rem;
+  box-shadow: 0.4rem 0.4rem #d6d6d6;
+  width: 90%;    
+}
+
   
-  .cuerpo {
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    text-align: center;
-    background-image: linear-gradient(to bottom right, #d8d8d8, #f2f2f2);
-    padding: 0.5rem;
-    box-sizing: border-box;
-    border-radius: 0.5rem;
-    box-shadow: 0.4rem 0.4rem #d6d6d6;
-    width: 100%;  
-  }
   
-  .pie {
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    text-align: center;
-    background-image: linear-gradient(to bottom right, #d8d8d8, #f2f2f2);
-    padding: 0.5rem;
-    box-sizing: border-box;
-    border-radius: 0.5rem;
-    box-shadow: 0.4rem 0.4rem #d6d6d6;
-    width: 100%;    
-  }
-  
-  .item-img {
-    display: block;
-    height: 70%;
-    width: 100%;
-    border-radius: 0.5rem;
-  }
-  .titulo {
-    display: flex;
-    justify-content: center;
-    color: #5c5358;
-    padding: 0.2rem;
-    font-size: 25px;
-  }
+
 /* Instalaciones*/
+
 .instal {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin: 10px;
+    padding: 5px;
+    width: 100%;
+    align-content:flex-end;
+    align-items: center;
+    background-color: rgb(238, 232, 237);
+    
 }
     
 
