--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ header{
   color: rgb(85, 119, 97);
   width: 10px;
   height: 10px;
-  padding-bottom: 5px;
+  padding-bottom: 15px;
   align-items: center;
 }
 
@@ -67,6 +67,7 @@ footer {
 
 .fa-brands {
     padding-right: 5px;
+    
 }
 
 .menufooter {
@@ -148,7 +149,6 @@ p {
   margin-bottom: 1rem;
   text-align: center;
   /*background-image: linear-gradient(to bottom right, #d8d8d8, #f2f2f2);*/
-  padding: 0.5rem;
   box-sizing: border-box;
   border-radius: 0.5rem;
   box-shadow: 0.4rem 0.4rem #d6d6d6;
@@ -165,9 +165,9 @@ p {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     margin: 10px;
-    padding: 5px;
+    padding: 10px;
     width: 100%;
-    align-content:flex-end;
+    align-content:flex-start;
     align-items: center;
     background-color: rgb(238, 232, 237);
     
@@ -195,6 +195,10 @@ li {
 }*/
 
 @media (max-width:320px){
+    
+
+
+
     .dccion{ 
         display: list-item; 
       }
@@ -206,10 +210,45 @@ li {
       }
      .lista {
         display: table-footer-group;
+        box-sizing: border-box;
+        width: 60%;
+        margin: 10px;
+        padding: 10px;
      }
+
+     .cuerpo {
+        padding: 0.5rem;
+        text-align: center;
+        padding: 0.5rem;
+        box-sizing: border-box;
+        border-radius: 0.5rem;
+        width: 25%;  
+     }
+
+     .tarjeta {
+        width: 35%;
+
+    .pie {
+        padding: 0.5rem;
+        text-align: center;
+        /*margin-bottom: 1rem;*/
+        text-align: right;
+        box-sizing: border-box;
+        /*border-radius: 0.5rem;
+        /*box-shadow: 0.4rem 0.4rem #d6d6d6;*/
+        width: 50%;    
+          } 
+
      .instal{
         display: list-item;
+        margin: 10px;
+        padding: 10px;
+        width: 50%;
+        align-content:flex;
+        align-items: center;
+        
      }
+    }
 }
 @media (max-width:768px){
     .dccion{ 
