--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,17 @@
     font-family: 'Lato', sans-serif;
     box-sizing: border-box;
 }
-
-a {
-    font-size: 13px;
-    color: rgb(85, 119, 97);
+.nav {
+    background-color: rgb(245, 241, 244);
     margin: 10px;
     padding: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
 }
 
+
+body {
+    margin: 10px;
+    padding: 10px;
+}
 header{
     margin: 10px;
     padding: 10px;
@@ -40,7 +40,7 @@ header{
 
 a {
     font-size: 30px;
-    color: rgb(60, 65, 61);
+    color: rgb(31, 32, 32);
     display: flex;
     padding: 10px;
     margin: 10px;
@@ -69,13 +69,16 @@ footer {
     padding-right: 5px;
     
 }
-
+li {
+    list-style: none;
+}
 .menufooter {
     padding: 10px;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr;
     margin: 10px;
+    font-size: 19px;
 } 
 h1{
     font-size: 45px;
@@ -92,87 +95,110 @@ p {
 }
 
 /*nosotros*/
-.dccion{ 
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+.contenedoresIndex {
+    display: grid;
+    grid-template-columns: 40fr 40fr;
+    grid-template-rows: 40fr 40fr;
+    margin: 10px;
+    padding: 10px ;
+    
+    }
+
+.contenedor {
+    margin: 10px;
+    padding: 10px ;
+    border: 2px solid rgb(136, 180, 152);
+    border-radius: 12px;
+    box-sizing: border-box;
+    background-color: rgb(248, 238, 247);
+    text-align: center;
+    font-size: 20px;
+    height: 250px;
+    align-items: center;
 }
-
-.datosperso{
-
- text-align: right;
-
+#fotofer {
+    height: 75%;
+    width: 40%;
 }
-.imgfer{
-  width: 85%;
-  align-items: last baseline;
-  height: 150%;
-  
-  padding: 0.5rem;
+#nos {
+    font-size: 25px;
 }
-
 
 /* Tratamientos*/
-
-.lista{
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
-  box-sizing: border-box;
-  width: 80%;
-  margin: 10px;
-  padding: 10px;
-  justify-content: center;
-  align-items: center;
-  justify-items: center;
+.mainIndex {
+    display:grid;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 1fr 1fr;
+    padding: 10px;
+    justify-items: center;
+}
+.enlace {
+    color: rgb(14, 3, 11);
+    font-size: 30px;
+    margin-top: 30px;
+    padding-top: 10px;
 }
 
-.tarjeta {
-  width: 65%;
-  font-size: medium;
-  font-weight: bolder;
-  text-align: center;
+.bloque1 {
+    font-size: 15px;
+    height: 70%;
+    width: 30%;
+    margin: 10px;
+    padding: 80px;
+    text-align: center;
+    background-image: url("../img/limpieza2.jpg");
+    background-size: cover;
 }
 
-.cuerpo {
-  padding: 0.5rem;
-  /*margin-bottom: 1rem;*/
-  text-align: center;
-  /*background-image: linear-gradient(to bottom right, #d8d8d8, #f2f2f2);*/
-  padding: 0.5rem;
-  box-sizing: border-box;
-  border-radius: 0.5rem;
-  /*box-shadow: 0.4rem 0.4rem #d6d6d6;*/
-  width: 90%;  
+.bloque2 {
+    font-size: 15px;
+    height: 70%;
+    width: 30%;
+    margin: 10px;
+    padding: 80px;
+    text-align: center;
+    background-image: url("../img/blanqueamiento2.jpg");
+    background-size: cover;
 }
 
-.pie {
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  text-align: center;
-  /*background-image: linear-gradient(to bottom right, #d8d8d8, #f2f2f2);*/
-  box-sizing: border-box;
-  border-radius: 0.5rem;
-  box-shadow: 0.4rem 0.4rem #d6d6d6;
-  width: 90%;    
+.bloque3 {
+    font-size: 15px;
+    height: 70%;
+    width: 30%;
+    margin: 10px;
+    padding: 80px;
+    text-align: center;
+    background-image: url("../img/bruxismo2.jpg");
+    background-size: cover;
 }
 
-  
+.bloque4 {
+    font-size: 15px;
+    height: 70%;
+    width: 30%;
+    margin: 10px;
+    padding: 80px;
+    text-align: center;
+    background-image: url("../img/ortodoncia2.jpg");
+    background-size: cover;
+}
+.bloque {
+    height: 50%;
+    margin-top: 40px;
+    padding: 10px;
+    text-align: center;
+}
+
+p {
+    color: rgb(85, 119, 97);
+    text-align: justify;
+    font-size: 14px;
+    padding: 5px;
+    margin: 8px
+}
   
 
 /* Instalaciones*/
-
-.instal {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    margin: 10px;
-    padding: 10px;
-    width: 100%;
-    align-content:flex-start;
-    align-items: center;
-    background-color: rgb(238, 232, 237);
-    
-}
-    
 
 
 #contacto {
@@ -183,87 +209,15 @@ p {
     background-color:rgb(241, 198, 225); 
     display: none;
 }
-/*ul {
-    font-size: 39px;
-    text-align: center;
-    color: rgb(60, 65, 61);   
-}
-li {
-    font-size: 28px;
-    text-align: center;
-    color: rgb(60, 65, 61);
-}*/
 
-@media (max-width:320px){
+
+@media (max-width:320px){}
     
 
 
 
-    .dccion{ 
-        display: list-item; 
-      }
-      
-      .datosperso{
-       text-align: right;
-       font-size: 5px;
-      
-      }
-     .lista {
-        display: table-footer-group;
-        box-sizing: border-box;
-        width: 60%;
-        margin: 10px;
-        padding: 10px;
-     }
+    
+     
 
-     .cuerpo {
-        padding: 0.5rem;
-        text-align: center;
-        padding: 0.5rem;
-        box-sizing: border-box;
-        border-radius: 0.5rem;
-        width: 25%;  
-     }
-
-     .tarjeta {
-        width: 35%;
-
-    .pie {
-        padding: 0.5rem;
-        text-align: center;
-        /*margin-bottom: 1rem;*/
-        text-align: right;
-        box-sizing: border-box;
-        /*border-radius: 0.5rem;
-        /*box-shadow: 0.4rem 0.4rem #d6d6d6;*/
-        width: 50%;    
-          } 
-
-     .instal{
-        display: list-item;
-        margin: 10px;
-        padding: 10px;
-        width: 50%;
-        align-content:flex;
-        align-items: center;
-        
-     }
-    }
-}
-@media (max-width:768px){
-    .dccion{ 
-        display: list-item; 
-      }
-      
-      .datosperso{
-       text-align: right;
-       font-size: 5px;
-      
-      }
-     .lista {
-        display: list-item;
-     }
-     .instal{
-        display: list-item;
-     }
-}
+@media (max-width:768px){}
+    
